httpbin/httpbin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    app: httpbin
    istio.io/rev: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin:latest
        ports:
        - containerPort: 80
        resources:
          # requests:
          #   memory: 300Mi
          #   cpu: 200m
          limits: 
            memory: 1Gi
            cpu: 500m
---
kind: Service
apiVersion: v1
metadata:
  name: httpbin
  namespace: httpbin
spec:
  type: NodePort
  selector:
    app: httpbin
  ports:
  - name: http
    nodePort: 30002
    port: 80
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#   name: httpbin
#   namespace: httpbin
# spec:
#   rules:
#   - http:
#       paths:
#       - pathType: Prefix
#         path: "/httpbin(/|$)(.*)"
#         backend:
#           service:
#             name: httpbin
#             port:
#               number: 80
# ---
