httpbin/istio-resources.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-route
  namespace: httpbin
spec:
  hosts:
  - httpbin.httpbin.svc.cluster.local
  http:
  - name: "httpbin-prefix"
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: httpbin.httpbin.svc.cluster.local
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: httpbin
#   namespace: httpbin
# spec:
#   action: ALLOW
#   rules:
#   - from:
#     - source:
#         remoteIpBlocks: ["10.244.0.22","10.244.0.14","10.244.0.18"]
